--- a/frontend/src/app/pages/chat/chat.component.html
+++ b/frontend/src/app/pages/chat/chat.component.html
@@ -68,7 +68,7 @@
       <div class="message-content">
         <div class="message-header">
           <span class="message-role">Assistant</span>
-          <span class="message-time">{{ formatTime(new Date()) }}</span>
+          <span class="message-time">{{ getCurrentTime() }}</span>
         </div>
         <div class="message-text" [innerHTML]="formatMessageContent(currentStreamMessage)"></div>
         <div class="streaming-indicator">
